started adding existing assets

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -17,7 +17,7 @@ displayURL="http://minecraft.curseforge.com/projects/zots-only-silver"
 credits="Zot201 (original mod), Sinhika (fork, maintenance, ports)."
 authors="Zot201, Sinhika"
 description='''
-A single ore mod, featuring silver ore: silver tools, armor, enchantments and other things made from it. 
+A Lost Ore from SimpleOres: silver! Features silver tools, armor, enchantments and other things made from it. 
 
 Additional Credits: 
 '''
