included src/generated in sourcesets; fixed typo in onlysilver id

--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,10 @@ minecraft {
     }
 }
 
+sourceSets.main.resources {
+    srcDir 'src/generated/resources'
+}
+
 repositories {
         maven {
                 name = "mcmodsrepo"
