--- a/build.gradle
+++ b/build.gradle
@@ -95,12 +95,12 @@ sourceSets {
     main.resources.srcDirs += 'src/generated/resources'
 }
 
-repositories {
-        maven {
-                name = "mcmodsrepo"
-                url = "file:///${project.projectDir}/../mcmodsrepo"
-        }
-}
+//repositories {
+//        maven {
+//                name = "mcmodsrepo"
+//                url = "file:///${project.projectDir}/../mcmodsrepo"
+//        }
+//}
 
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
@@ -108,7 +108,7 @@ dependencies {
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     //minecraft 'net.minecraftforge:forge:1.15.2-31.1.34'
     minecraft "net.minecraftforge:forge:${version_forge}"
-    compile fg.deobf("mod.alexndr.simpleores:SimpleOres2:${simpleores_version}")
+//    compile fg.deobf("mod.alexndr.simpleores:SimpleOres2:${simpleores_version}")
 }
 
 
