--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -3,7 +3,7 @@
 modLoader="javafml" #mandatory
 
 # A version range to match for said mod loader - for regular FML @Mod it will be the forge version
-loaderVersion="[31,)" #mandatory
+loaderVersion="[32,)" #mandatory
 issueTrackerURL="https://github.com/Sinhika/OnlySilver/issues"
 logoFile=""
 license="LGPL 3+"
@@ -12,7 +12,7 @@ license="LGPL 3+"
 modId="onlysilver"
 version="${version}"
 displayName="Zot's Only Silver"
-updateJSONURL="https://raw.githubusercontent.com/Sinhika/OnlySilver/1.15/update.json"
+updateJSONURL="https://raw.githubusercontent.com/Sinhika/OnlySilver/1.16/update.json"
 displayURL="http://minecraft.curseforge.com/projects/zots-only-silver"
 credits="Zot201 (original mod), Sinhika (fork, maintenance, ports)."
 authors="Zot201, Sinhika"
@@ -25,13 +25,13 @@ Additional Credits:
 [[dependencies.onlysilver]]
     modId="forge"
     mandatory=true
-    versionRange="[31.2.0,)"
+    versionRange="[32.0.0,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.onlysilver]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.15.2,]"
+    versionRange="[1.16.1]"
     ordering="NONE"
     side="BOTH"
