--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,10 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # general
-version_minecraft = 1.16.1
-version_snapshot = 20200723-1.16.1
-version_forge = 1.16.1-32.0.108
+version_minecraft = 1.16.3
+version_snapshot = 20200916-1.16.2
+version_forge = 1.16.3-34.1.10
 
 # OnlySilver
-version_mod = 3.1.0
-
+version_mod = 3.2.0
+simplecorelib_version = 1.16.3-2.0.0.5
