--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -3,9 +3,8 @@
 modLoader="javafml" #mandatory
 
 # A version range to match for said mod loader - for regular FML @Mod it will be the forge version
-loaderVersion="[32,)" #mandatory
+loaderVersion="[34,)" #mandatory
 issueTrackerURL="https://github.com/Sinhika/OnlySilver/issues"
-logoFile=""
 license="LGPL 3+"
 
 [[mods]]
@@ -25,13 +24,21 @@ Additional Credits:
 [[dependencies.onlysilver]]
     modId="forge"
     mandatory=true
-    versionRange="[32.0.0,)"
+    versionRange="[34.1.0,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.onlysilver]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.16.1]"
+    versionRange="[1.16.3]"
     ordering="NONE"
     side="BOTH"
+
+[[dependencies.onlysilver]]
+    modId="simplecorelib"
+    mandatory=true
+    versionRange="[1.16.3-2.0.0.5,)"
+    ordering="NONE"
+    side="BOTH"
+
