--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,6 @@ version_snapshot = 20200119-1.14.3
 version_forge = 1.14.4-28.2.23
 
 # OnlySilver
-version_mod = 2.9.0
+version_mod = 2.9.0-final
 #jei_version = 6.0.2.12
 
