updated forge version for 1.15.2

--- a/build.gradle
+++ b/build.gradle
@@ -95,12 +95,12 @@ sourceSets {
     main.resources.srcDirs += 'src/generated/resources'
 }
 
-//repositories {
-//        maven {
-//                name = "mcmodsrepo"
-//                url = "file:///${project.projectDir}/../mcmodsrepo"
-//        }
-//}
+repositories {
+        maven {
+                name = "mcmodsrepo"
+                url = "file:///${project.projectDir}/../mcmodsrepo"
+        }
+}
 
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
