--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -42,3 +42,17 @@ Additional Credits:
     ordering="NONE"
     side="BOTH"
 
+[[dependencies.onlysilver]]
+        modId="silents_mechanisms"
+        mandatory=false
+        versionRange="[1.16.3-0.8.9,)"
+        ordering="BEFORE"
+        side="BOTH"
+        
+[[dependencies.onlysilver]]
+        modId="silentgear"
+        mandatory=false
+        versionRange="[1.16.3-2.5.2,)"
+        ordering="BEFORE"
+        side="BOTH"
+
