updated to Forge 36.1.0, FG4, gradle 6.8.3, Mojang mappings

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,7 +9,7 @@ license="LGPL 3+"
 
 [[mods]]
 modId="onlysilver"
-version="${version}"
+version="${file.jarVersion}"
 displayName="Zot's Only Silver"
 updateJSONURL="https://raw.githubusercontent.com/Sinhika/OnlySilver/1.16/update.json"
 displayURL="http://minecraft.curseforge.com/projects/zots-only-silver"
@@ -24,7 +24,7 @@ Additional Credits:
 [[dependencies.onlysilver]]
     modId="forge"
     mandatory=true
-    versionRange="[36.0.0,)"
+    versionRange="[36.1.0,)"
     ordering="NONE"
     side="BOTH"
 
@@ -38,7 +38,7 @@ Additional Credits:
 [[dependencies.onlysilver]]
     modId="simplecorelib"
     mandatory=true
-    versionRange="[1.16.5-2.0.5.0,1.16.5-2.0.6.0)"
+    versionRange="[1.16.5-2.0.7.0, 1.16.5-2.0.8.0)"
     ordering="NONE"
     side="BOTH"
 
