fixed semantic versioning issue with Silent's Mechanisms; updated forge version

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -45,14 +45,14 @@ Additional Credits:
 [[dependencies.onlysilver]]
         modId="silents_mechanisms"
         mandatory=false
-        versionRange="[1.16.3-0.8.9,)"
+        versionRange="[0.8.9,)"
         ordering="BEFORE"
         side="BOTH"
         
 [[dependencies.onlysilver]]
         modId="silentgear"
         mandatory=false
-        versionRange="[1.16.3-2.5.2,)"
+        versionRange="[2.5.2,)"
         ordering="BEFORE"
         side="BOTH"
 
